@@ -1,3 +1,7 @@
+2012-03-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-11-01
+        * Fix compilation errors.
+
 2012-03-14  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-11-00
         * Add new tool JetEfficienciesMonTool from Hardeep.
